--- a/css/style.css
+++ b/css/style.css
@@ -358,8 +358,10 @@ img {
 
 .swiper-slide {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center; /* Centra el contenido horizontalmente */
+    align-items: center;     /* Centra el contenido verticalmente */
+    /* Asegúrate de que el slide pueda ocupar el ancho necesario para centrar */
+    width: 100% !important; /* Forzar el ancho completo para el centrado del item */
 }
 
 .swiper-pagination-bullet-active {
@@ -1059,8 +1061,8 @@ img {
     border: 2px solid #dc3545; /* Borde rojo para la lupa */
     border-radius: 8px; /* Forma cuadrada con esquinas redondeadas */
     cursor: none; /* Oculta el cursor dentro de la lupa */
-    width: 300px; /* Tamaño de la lupa (AUMENTADO) */
-    height: 300px; /* Tamaño de la lupa (AUMENTADO) */
+    width: 220px; /* Tamaño de la lupa (AUMENTADO A 220px) */
+    height: 220px; /* Tamaño de la lupa (AUMENTADO A 220px) */
     background-repeat: no-repeat;
     background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco semitransparente */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
