--- a/css/style.css
+++ b/css/style.css
@@ -1019,10 +1019,9 @@ img {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro semitransparente */
-    display: flex;
-    justify-content: center;
+    justify-content: center; /* These flex properties will apply when JS sets display: flex */
     align-items: center;
-    z-index: 9999; /* Asegura que esté por encima de todo */
+    z-index: 9999;
 }
 
 .image-zoom-content {
