--- a/css/style.css
+++ b/css/style.css
@@ -703,7 +703,7 @@ img {
         right: 20px;
         font-size: 25px;
     }
-
+} /* <--- THIS IS THE MISSING CLOSING BRACE */
 
 /* Product Detail Page Specific Styles */
 .product-detail-container {
