--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ img {
 
 /* Ajuste para el grid de productos (tanto destacados como resultados de búsqueda) */
 .products-grid {
-    display: grid;
+    display: none;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* Ajustado para mejor responsividad */
     gap: 30px;
     justify-items: center; /* Centra los items dentro de las celdas del grid */
