--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ img {
 .logo img {
     height: 3.5rem; /* Ajusta según el tamaño de tu logo */
     width: auto;
-    position: center;
+    text-align: center;
 }
 
 .categories-nav {
